@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-31T08:32:49Z",
-  "count_outdated" : 160,
-  "uniques_outdated" : 66,
-  "count" : 183,
+  "timestamp" : "2022-05-31T16:38:31Z",
+  "count_outdated" : 162,
+  "uniques_outdated" : 67,
+  "count" : 185,
   "uniques" : 83,
   "clones" : [
-    {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 2,
@@ -56,8 +49,8 @@
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
