@@ -3,11 +3,6 @@
   "uniques": 9,
   "clones": [
     {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -39,7 +34,7 @@
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
